tests/fixtures/compile-errors/instantiation-not-enough-type-parameters/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.NotEnoughTypeParameters